@@ -1,225 +1,207 @@
-﻿<?php
+<?php
 
 /**
- * this file has been translated by: renstanford (renstanford@gmail.com)
- * http://okecoy.com
+ * this file has been translated by: Rendra Stanfordi
+ * Email: renstanford@gmail.com
+ * Website: http://okecoy.com
+ * Date: 29 August 2008
  */
 
 return array(
 
 // general
-'Pages' => 'Halaman',
-'Snippets' => 'Snippets',
-'Layouts' => 'Layouts',
-'Files' => 'Files',
-'Users' => 'Pengguna',
-'Modify' => 'Sunting',
-'Action' => 'Aksi',
-'Close' => 'Tutup',
-'Save' => 'Simpan',
-'Save and Continue Editing' => 'Simpan dan Lanjutkan Sunting',
-'or' => 'atau',
-'Cancel' => 'Batal',
-'Name' => 'Nama',
+'Administration'  => 'Administrasi',
+'Pages'           => 'Halaman',
+'Snippets'        => 'Potongan',
+'Layouts'         => 'Tataruang',
+'Users'           => 'Pengguna',
+'Modify'          => 'Modifikasi',
+'Action'          => 'Aksi',
+'Close'           => 'Tutup',
+'Save'            => 'Simpan',
+'Save and Continue Editing' => 'Simpan dan Lanjutkan Menyunting',
+'or'              => 'atau',
+'Cancel'          => 'Batal',
+'Name'            => 'Nama',
 'Last updated by' => 'Terakhir dimutakhirkan oleh',
-'on' => 'pada',
-'Upload' => 'Unggah',
+'on'              => 'pada',
+'Upload'          => 'Unggah',
 'Are you sure you wish to delete' => 'Anda yakin ingin menghapus',
-'Published' => 'Terpublikasi',
-'Draft' => 'Draft',
-'Reviewed' => 'Direview',
-'Hidden' => 'Tersembunyi',
-'More' => 'Selebihnya',
-'Less' => 'Kurang',
-'Add' => 'Tambah',
-'Required.' => 'Diperlukan.',
-'Optional.' => 'Opsional.',
-'yes' => 'ya',
-'no' => 'tidak',
-
-
-// files
-'File' => 'File',
-'Size' => 'Ukuran',
-'Permission' => 'Atribut',
-'Permissions' => 'Atribut',
-'Change mode' => 'Ganti mode',
-'Remove file' => 'Hapus file',
-'Create new file' => 'Membuat file baru',
-'Create new directory' => 'Membuat direktori baru',
-'Upload file' => 'Unggah file',
-'rename' => 'rename',
-'overwrite it?' => 'timpa jika sudah ada',
+'Published'       => 'Terpublikasi',
+'Draft'           => 'Naskah',
+'Reviewed'        => 'Ditinjau',
+'Hidden'          => 'Tersembunyi',
+'More'            => 'Selebihnya',
+'Less'            => 'Kurang',
+'Add'             => 'Tambah',
+'Required.'       => 'Diperlukan.',
+'Optional.'       => 'Opsional.',
+'yes'             => 'ya',
+'no'              => 'tidak',
 
 // layouts
-'Layout' => 'Layout',
-'New Layout' => 'Layout Baru',
-'What is a Layout?' => 'Apakah Layout?',
-'Use layouts to apply a visual look to a Web page. Layouts can contain special tags to include
-  page content and other elements such as the header or footer. Click on a layout name below to
-  edit it or click <strong>Remove</strong> to delete it.' =>
-'Gunakan layout-layout untuk mengubah tampilan visual dari halaman Web. Layout dapat berisi tags spesial yang menyertakan isi halaman dan elemen lain seperti header atau footer. Klik salah satu nama layout di bawah untuk disunting atau klik <strong>Hapus</strong> untuk membuangnya',
-'Add Layout' => 'Tambah Layout',
-'Edit Layout' => 'Sunting Layout',
-'Remove Layout' => 'Hapus Layout',
-'inherit' => 'turunan',
+'Layout'            => 'Tataruang',
+'New Layout'        => 'Tataruang Baru',
+'What is a Layout?' => 'Apakah Tataruang?',
+'Use layouts to apply a visual look to a Web page. Layouts can contain special tags to include page content and other elements such as the header or footer. Click on a layout name below to edit it or click <strong>Remove</strong> to delete it.' => 'Gunakan tataruang untuk mengubah tampilan visual dari halaman Web. Tataruang dapat berisi tags khusus yang menyertakan isi halaman dan elemen lain seperti header atau footer. Klik salah satu nama tataruang di bawah untuk disunting atau klik <strong>Hapus</strong> untuk menghapusnya.',
+'Add Layout'        => 'Tambah Tataruang',
+'Edit Layout'       => 'Sunting Tataruang',
+'Edit layout'       => 'Sunting tataruang',
+'Remove Layout'     => 'Hapus Tataruang',
+'inherit'           => 'turunan',
 
 // pages
-'protected' => 'privat',
-'Page' => 'Halaman',
-'reorder' => 'Mengurutkan',
-'Add Page' => 'Tambah Halaman',
-'Edit Page' => 'Sunting Halaman',
-'Status' => 'Status',
-'Order' => 'Order',
-'Add child' => 'Tambah anakan',
-'Add Tab' => 'Tambah Tab',
-'Add Part' => 'Tambah Bagian',
-'Remove Tab' => 'Hapus Tab',
+'Page'                    => 'Halaman',
+'reorder'                 => 'Susun',
+'Add Page'                => 'Tambah Halaman',
+'Edit Page'               => 'Sunting Halaman',
+'Status'                  => 'Status',
+'Order'                   => 'Susunan',
+'Add child'               => 'Tambah anak',
+'Add Tab'                 => 'Tambah Tab',
+'Add Part'                => 'Tambah Bagian',
+'Remove Tab'              => 'Hapus Tab',
 'Delete the current tab?' => 'Hapus tab ini?',
-'Remove page' => 'Hapus halaman',
-'Remove page disable' => 'Hapus halaman tidak dimatikan',
-'Drag and Drop' => 'Drag dan Lepas',
-'Drag and Drop disable' => 'Drag dan Lepas dimatikan',
-'Page Title' => 'Judul Halaman',
-'Metadata' => 'Metadata',
-'Filter' => 'Penyaring',
-'none' => 'Tidak ada',
-'Page Type' => 'Tipe Halaman',
-'Comments' => 'Komentar',
+'Remove page'             => 'Hapus halaman',
+'Remove page disable'     => 'Hapus halaman dimatikan',
+'Drag and Drop'           => 'Geser dan Lepas',
+'Drag and Drop disable'   => 'Geser dan Lepas dimatikan',
+'Page Title'              => 'Judul Halaman',
+'Metadata'                => 'Metadata',
+'Filter'                  => 'Penyaring',
+'none'                    => 'Tidak ada',
+'Page Type'               => 'Tipe Halaman',
+'protected'               => 'Terproteksi',
+
+// plugins
+'Plugin'    => 'Plugin',
+'Website'   => 'Situs',
+'Version'   => 'Versi',
+'Latest'    => 'Terbaru',
+'Enabled'   => 'Diaktifkan',
 
 // settings
-'Enabled' => 'Hidupkan',
-'Administration' => 'Administrasi',
-'Settings' => 'Pengaturan',
-'Admin Site title' => 'Judul Halaman Admin',
-'Language' => 'Bahasa',
-'Administration Theme' => 'Tema Administrasi',
-'Page options' => 'Opsi Halaman',
-'Default Status' => 'Status Default',
-'Default Filter' => 'Penyaring Default',
-'Optional component' => 'Komponen opsional',
-'Enable comments' => 'Hidupkan komentar',
-'Auto approve comments' => 'Otomatis setujui komentar',
-'Display stats' => 'Tampilkan stats',
-'Display file manager' => 'Tampilkan file manajer',
-'By using <strong>&lt;img src="img_path" /&gt;</strong> you can set your company logo instead of a title.' => 'Dengan menggunakan <strong>&lt;img src="img_path" /&gt;</strong> anda dapat menentukan logo perusahaan tidak cuma judul teks.',
-'This will set your language for the backend.' => 'Ini akan menentukan bahasa yang anda pakai di backend.',
-'This will change your Administration theme.' => 'Ini akan mengganti tema untuk Administrasi.',
-'Only for filter in pages, NOT in snippets' => 'Hanya untuk penyaring pada halaman, BUKAN di snippets.',
+'Settings'              => 'Pengaturan',
+'Admin Site title'      => 'Judul Halaman Admin',
+'Language'              => 'Bahasa',
+'Administration Theme'  => 'Tema Administrasi',
+'Page options'          => 'Opsi Halaman',
+'Default Status'        => 'Status Default',
+'Default Filter'        => 'Penyaring Default',
+'Optional component'    => 'Komponen opsional',
+'Display stats'         => 'Tampilkan stats',
+'Display file manager'  => 'Tampilkan File manager',
+'By using <strong>&lt;img src="img_path" /&gt;</strong> you can set your company logo instead of a title.' => '',
+'This will set your language for the backend.'  => 'Ini akan menentukan bahasa yang anda pakai pada backend.',
+'This will change your Administration theme.'   => 'Ini akan mengganti tema untuk Administrasi.',
+'Only for filter in pages, NOT in snippets'     => 'Hanya untuk penyaring dalam halaman, BUKAN dalam potongan.',
 
 // snippets
-'New Snippet' => 'Snippet Baru',
-'What is a Snippet?' => 'Apakah Snippets?',
-'Snippets are generally small pieces of content which are included in other pages or layouts.' =>
-'Snippet pada umumnya adalah penggalan/potongan kecil dari konten yang bisa disertakan ke halaman lainnya atau layout.',
-'Snippet' => 'Snippet',
-'Add Snippet' => 'Tambah Snippet',
-'Edit Snippet' => 'Sunting Snippet',
-'Remove Snippet' => 'Hapus Snippet',
+'New Snippet'           => 'Potongan Baru',
+'What is a Snippet?'    => 'Apakah Potongan?',
+'Snippets are generally small pieces of content which are included in other pages or layouts.' => 'Potongan pada umumnya adalah cuplikan/penggalan sebagian konten yang bisa disertakan ke halaman lainnya atau tataruang.',
+'Snippet'               => 'Potongan',
+'Add Snippet'           => 'Tambah Potongan',
+'Add snippet'           => 'Tambah potongan',
+'Edit Snippet'          => 'Sunting Potongan',
+'Edit snippet'          => 'Sunting potongan',
+'Remove Snippet'        => 'Hapus Potongan',
 
 
 // users
-'Add User' => 'Tambah Pengguna',
-'Edit user' => 'Sunting Pengguna',
-'Username' => 'Namapengguna',
-'E-mail' => 'E-mail',
-'Password' => 'Sandi',
-'Forgot password?' => 'Lupa sandi?',
-'Forgot password' => 'Lupa sandi',
-'Email address:' => 'Alamat email:',
-'Confirm Password' => 'Konfirmasi Sandi',
-'Send password' => 'Kirim sandi',
-'No user found!' => 'Tidak ditemukan pengguna!',
-'Login' => 'Log masuk',
-'Remember me for 14 days' => 'Ingat saya dalam 14 hari',
-'Roles' => 'Jabatan',
-'Administrator' => 'Administrator',
-'Developer' => 'Pengembang',
-'Editor' => 'Penyunting',
-'Optional. Please use a valid e-mail address.' => 'Opsional. Mohon gunakan alamat e-mail yang absah.',
-'At least 3 characters. Must be unique.' => 'Sedikitnya 3 karakter. Harus unik.',
-'At least 5 characters.' => 'Sedikitnya 5 karakter.',
+'Add User'                  => 'Tambah Pengguna',
+'Edit user'                 => 'Sunting Pengguna',
+'Username'                  => 'Namapengguna',
+'E-mail'                    => 'E-mail',
+'Password'                  => 'Sandi',
+'Forgot password?'          => 'Lupa sandi?',
+'Forgot password'           => 'Lupa sandi',
+'Email address:'            => 'Alamat email:',
+'Email address'             => 'Alamat email',
+'Confirm Password'          => 'Konfirmasi Sandi',
+'Send password'             => 'Kirim sandi',
+'No user found!'            => 'Pengguna tidak ditemukan!',
+'Login'                     => 'Log masuk',
+'Remember me for 14 days'   => 'Ingat saya dalam 14 hari',
+'Roles'                     => 'Jabatan',
+'Administrator'             => 'Administrator',
+'Developer'                 => 'Developer',
+'Editor'                    => 'Editor',
+'Optional. Please use a valid e-mail address.'  => 'Opsional. Mohon gunakan alamat e-mail yang absah.',
+'At least 3 characters. Must be unique.'        => 'Sedikitnya 3 karakter. Harus unik.',
+'At least 5 characters.'    => 'Sedikitnya 5 karakter.',
 'Leave password blank for it to remain unchanged.' => 'Biarkan kosong jika sandi tidak ingin diganti.',
 'Roles restrict user privileges and turn parts of the administrative interface on or off.' => 'Jabatan akan membatasi hak-hak pengguna dan mengubah bagian tertentu administratif agar dihidupkan atau dimatikan.',
-'New User' => 'Pengguna Baru',
-'Where avatar come from?' => 'Dari mana avatar disediakan?',
-'They are directly linked with <a href="http://www.gravatar.com/" target="_blank">Gravatar</a> site. It is free!' => 'Avatar akan diambil otomatis dari situs <a href="http://www.gravatar.com" target="_blank" title="avatar dari gravatar">Gravatar</a>, gratis!',
-
+'New User'                  => 'Pengguna Baru',
+'Where do the avatars come from?' => 'Dari mana avatar disediakan?',
+'The avatars are automatically linked for those with a <a href="http://www.gravatar.com/" target="_blank">Gravatar</a> (a free service) account.' => 'Avatar akan ditautkan otomatis dari situs <a href="http://www.gravatar.com" target="_blank" >Gravatar</a>. Gratis!',
+'An email has been send with your new password!' => 'Sebuah Email telah dikirim bersama dengan sandi baru anda!',
 
 // errors and success
-//'File :name has been created with success!' => 'Archivo <strong>:name</strong> creado correctamente!',
-//'Directory is not writable! File has not been saved!' => 'La carpeta no tiene permisos de escritura. El archivo no ha sido guardado',
-//'File :name has been created!' => 'Archivo <strong>:name</strong> creado!',
-//'File :name has not been created!' => 'Archivo <strong>:name</strong> no ha sido creado!',
-//'Directory :name has been created!' => 'Carpeta <strong>:name</strong> creada!',
-//'Directory :name has not been created!' => 'La carpeta <strong>:name</strong> no ha sido creada!',
-//'File :name has been deleted with success!' => 'Archivo <strong>:name</strong> eliminado satisfacoriamente!',
-//'File :name has not been deleted!' => 'El archivo <strong>:name</strong> no ha sido eliminado!',
-//'Directory :name has been deleted with success!' => 'Carpeta <strong>:name</strong> eliminada satisfacoriamente!',
-//'Directory :name has not been deleted!' => 'La carpeta <strong>:name</strong> no ha sido eliminada!',
-//'File :name has been uploaded with success!' => 'Archivo <strong>:name</strong> subido con éxito!',
-//'File has not been uploaded!' => 'El archivo no ha sido subido!',
-//'Permissions of file has been changed!' => 'Los permisos del archivo han sido modificados!',
-//'Permissions of directory has been changed!' => 'Los permisos de la carpeta han sido modificados!',
-//'Change mode has not been done!' => 'No se podido cambiar el modo!',
-//'File or directory not found!' => 'Archivo o carpeta no encontrado!',
-
-'Layout has been added!' => 'Layout telah ditambahkan!',
-'Layout has not been added. Name must be unique!' => 'Layout belum ditambahkan. Nama harus unik!',
-'Layout has been saved!' => 'Layout telah disimpan!',
-'Layout has not been saved. Name must be unique!' => 'Layout belum tersimpan. Nama harus unik!',
-'Layout :name has been deleted!' => 'Layout <strong>:name</strong> telah dihapus!',
-'Layout :name has not been deleted!' => 'Layout <strong>:name</strong> tidak terhapus',
-'Layout not found!' => 'Layout tidak ditemukan!',
+'Layout has been added!'                            => 'Tataruang telah ditambahkan!',
+'Layout has not been added. Name must be unique!'   => 'Tataruang tidak dapat ditambahkan. Nama harus unik!',
+'Layout has been saved!'                            => 'Tataruang telah disimpan!',
+'Layout has not been saved. Name must be unique!'   => 'Tataruang tidak dapat disimpan. Nama harus unik!',
+'Layout :name has been deleted!'                    => 'Tataruang <strong>:name</strong> telah dihapus!',
+'Layout :name has not been deleted!'                => 'Tataruang <strong>:name</strong> tidak dapat terhapus',
+'Layout not found!'                                 => 'Tataruang tidak ditemukan!',
 
 'Login failed. Please check your login data and try again.' => 'Log masuk gagal. Mohon periksa kembali data isian dan coba lagi.',
 
-'Page has been saved!' => 'Halaman telah disimpan!',
-'Page has not been saved!' => 'Halaman tidak tersimpan!',
-'Page not found!' => 'Halaman tidak ditemukan!',
-'Page :title has been deleted!' => 'Halaman <strong>:title</strong> telah dihapus!',
-'Page :title has not been deleted!' => 'Halaman <strong>:title</strong> tidak terhapus!',
-'Action disabled!' => 'Aksi dimatikan!',
+'Page has been saved!'              => 'Halaman telah disimpan!',
+'Page has not been saved!'          => 'Halaman tidak dapat disimpan!',
+'Page not found!'                   => 'Halaman tidak ditemukan!',
+'Page :title has been deleted!'     => 'Halaman <strong>:title</strong> telah dihapus!',
+'Page :title has not been deleted!' => 'Halaman <strong>:title</strong> tidak dapat dihapus!',
+'Action disabled!'                  => 'Aksi dimatikan!',
 
-'Snippet has been added!' => 'Snippet telah ditambahkan!',
-'Snippet has not been added. Name must be unique!' => 'Snippet belum ditambahkan. Nama harus unik!',
-'Snippet :name has been saved!' => 'Snippet <strong>:name</strong> telah disimpan!',
-'Snippet :name has not been saved. Name must be unique!' => 'Snippet <strong>:name</strong> tidak disimpan. Nama harus unik!',
-'Snippet :name has been deleted!' => 'Snippet <strong>:name</strong> telah dihapus!',
-'Snippet :name has not been deleted!' => 'Snippet <strong>:name</strong> tidak dihapus!',
-'Snippet not found!' => 'Snippet tidak ditemukan!',
+'Snippet has been added!'                                => 'Potongan telah ditambahkan!',
+'Snippet has not been added. Name must be unique!'       => 'Potongan tidak dapat ditambahkan. Nama harus unik!',
+'Snippet :name has been saved!'                          => 'Potongan <strong>:name</strong> telah disimpan!',
+'Snippet :name has not been saved. Name must be unique!' => 'Potongan <strong>:name</strong> tidak dapat disimpan. Nama harus unik!',
+'Snippet :name has been deleted!'                        => 'Potongan <strong>:name</strong> telah dihapus!',
+'Snippet :name has not been deleted!'                    => 'Potongan <strong>:name</strong> tidak dapat dihapus!',
+'Snippet not found!'                                     => 'Potongan tidak ditemukan!',
 
-'You do not have permission to access the requested page!' => 'Anda tidak memiliki ijin untuk mengakses halaman yang diminta!',
-'Password and Confirm are not the same or too small!' => 'Sandi dan Konfirmasi Sandi tidak sama atau terlalu sedikit!',
-'Username must be 3 character minimum!' => 'Namapengguna harus memiliki minimal 3 karakter!',
-'User has been added!' => 'Pengguna telah ditambahkan!',
-'User has not been added!' => 'Pengguna tidak ditambahkan!',
-'User not found!' => 'Pengguna tidak ditemukan!',
-'Username have not been save must be 3 character minimum!' => 'Namapengguna tidak disimpan, minimal harus 3 karakter!',
-'User has been saved!' => 'Pengguna telah disimpan!',
-'User has not been saved!' => 'Pengguna tidak disimpan!',
-'User <strong>:name</strong> has been deleted!' => 'Pengguna <strong>:name</strong> telah dihapus!',
-'User <strong>:name</strong> has not been deleted!' => 'Pengguna <strong>:name</strong> tidak dihapus!',
+'You do not have permission to access the requested page!' => 'Anda tidak diijinkan mengakses halaman yang diminta!',
+'Password and Confirm are not the same or too small!'      => 'Sandi dan Konfirmasi Sandi tidak sama atau terlalu sedikit!',
+'Username must contain a minimum of 3 characters!'         => 'Namapengguna harus memiliki minimal 3 karakter!',
+'User has been added!'                                     => 'Pengguna telah ditambahkan!',
+'User has not been added!'                                 => 'Pengguna tidak dapat ditambahkan!',
+'User not found!'                                          => 'Pengguna tidak ditemukan!',
+'User has been saved!'                                     => 'Pengguna telah disimpan!',
+'User has not been saved!'                                 => 'Pengguna tidak dapat disimpan!',
+'User <strong>:name</strong> has been deleted!'            => 'Pengguna <strong>:name</strong> telah dihapus!',
+'User <strong>:name</strong> has not been deleted!'        => 'Pengguna <strong>:name</strong> tidak dapat dihapus!',
 
 // layout
-'You are currently logged in as' => 'Anda sedang login sebagai',
-'Log Out' => 'Log Keluar',
-'View Site' => 'Lihat Situs',
-'Thank you for using' => 'Terimakasih telah menggunakan',
-'version' => 'versi',
-'Version' => 'Versi',
-'Page rendered in' => 'halaman dibuat dalam waktu',
-'seconds' => 'detik',
-'Memory usage:' => 'Penggunaan Memori:',
-'Create' => 'Buat',
+'You are currently logged in as'    => 'Anda sedang login sebagai',
+'Log Out'                           => 'Log Keluar',
+'View Site'                         => 'Lihat Situs',
+'Thank you for using'               => 'Terimakasih telah menggunakan',
+'version'                           => 'versi',
+'Page rendered in'                  => 'Halaman dibuat dalam waktu',
+'seconds'                           => 'detik',
+'Memory usage:'                     => 'Penggunaan Memori:',
+
+// TO BE REMOVED IN LATER VERSIONS
+
+// File manager
+'Files' => 'File',
+
+// Comments
+'Enable comments'       => 'Perbolehkan Komentar',
+'Auto approve comments' => 'Otomatis setujui komentar',
+'Delete'                => 'Hapus',
+'Reject'                => 'Tolak',
+'Comments'              => 'Komentar',
+'Open'					=> 'Terbuka',
+'Closed'				=> 'Tertutup',
+'Edit comment'			=> 'Sunting komentar',
 
 //Metadata
 'Created date' => 'Tanggal buat',
 'Published date' => 'Tanggal publikasi',
-'Description' => 'Deskripsi',
-// Comments
-'Delete' => 'Hapus',
-'Unapprove' => 'Belum disetujui',
-'Reject' => 'Tolak',
+
 );
+?>
